@@ -1,3 +1,7 @@
+2015-12-08  Nik Nyby  <nnyby@columbia.edu>
+
+	* Fix image collection on learn.columbia.edu.
+
 2015-11-23  Nik Nyby  <nnyby@columbia.edu>
 
 	* Removed hosthandler for vital.ccnmtl.columbia.edu, since
